# golden-agent-dataset

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
app/cli/: __init__.py  main.py
app/exporters/: __init__.py  jsonl_exporter.py
app/generators/: __init__.py  pipeline_config.py  prompt_builder.py  trajectory_generator.py
app/judge/: __init__.py  judge.py
app/repair/: __init__.py  repair_agent.py
app/reviewers/: __init__.py  sample_reviewer.py
app/schema/: __init__.py  models.py
app/transformers/: __init__.py  swebench_transformer.py
app/validators/: __init__.py  rules.py  validators.py
configs/: balance.yaml  default_tools.yaml  pipeline.yaml
examples/: sample_trajectory.jsonl  task_templates.yaml
prompts/: system-prompts.yaml
tests/: test_pipeline.py  test_schema.py  test_transformer.py  test_validators.py
